# models/db_models/cli_role.gen.go
@@ -1,22 +1,0 @@
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-
-package db_models
-
-const TableNameCliRole = "cli_role"
-
-// CliRole mapped from table <cli_role>
-type CliRole struct {
-	RoleID      int64  `gorm:"column:role_id;primaryKey;autoIncrement:true" json:"role_id"`
-	IncludeType string `gorm:"column:include_type;not null" json:"include_type"`
-	NeType      string `gorm:"column:ne_type;not null" json:"ne_type"`
-	Scope       string `gorm:"column:scope;not null" json:"scope"`
-	Permission  string `gorm:"column:permission;not null" json:"permission"`
-	Path        string `gorm:"column:path;not null" json:"path"`
-}
-
-// TableName CliRole's table name
-func (*CliRole) TableName() string {
-	return TableNameCliRole
-}
