# models/db_models/cli_role_user_mapping.gen.go
@@ -1,18 +1,0 @@
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-// Code generated by gorm.io/gen. DO NOT EDIT.
-
-package db_models
-
-const TableNameCliRoleUserMapping = "cli_role_user_mapping"
-
-// CliRoleUserMapping mapped from table <cli_role_user_mapping>
-type CliRoleUserMapping struct {
-	UserID     int64  `gorm:"column:user_id;primaryKey" json:"user_id"`
-	Permission string `gorm:"column:permission;primaryKey" json:"permission"`
-}
-
-// TableName CliRoleUserMapping's table name
-func (*CliRoleUserMapping) TableName() string {
-	return TableNameCliRoleUserMapping
-}
